# LLM-Gateway

./: .env.example  .env.gateway.example  .gitignore  CLAUDE.md  Makefile  OVERVIEW.md  README.md  implementation.md  pyproject.toml
demo/: quickstart.py
deploy/: Dockerfile  Dockerfile.fips  docker-compose.yml
deploy/helm/: Chart.yaml  values-govcloud.yaml  values.yaml
deploy/network-policies/: k8s-egress-policy.yaml
docs/: ADAPTERS.md  COMPLIANCE-EVIDENCE.md  CONFIGURATION.md  EU-AI-ACT-COMPLIANCE.md  FLOW-AND-SOUNDNESS.md  HOW-IT-WORKS.md  ISO-42001-COMPLIANCE.md  MARKET-RESEARCH.md  OPENWEBUI-QUICKSTART.md  QUICKSTART.md  WIKI-EXECUTIVE.md  gateway-chat.html  gateway-workflow.html  walacor-gateway-2pager.html  walacor-gateway-solution-brief.html
docs/archive/: PLAN-MULTI-STRATEGY-TOOL-GATEWAY.md  ROADMAP-PHASE-9-13.md  walacor-gateway-implementation-plan.docx
docs/diagrams/: all-6-diagrams.json  architecture-and-flow.json
docs/plans/: 2026-03-10-phases-23-29-implementation.md  2026-03-10-standalone-gateway-features-design.md  2026-03-13-deep-analysis-implementation-plan.md  2026-03-13-storage-abstraction-plan.md  2026-03-14-multimodal-audit-implementation-plan.md
plugins/openwebui/: README.md  attachment_notifier.py  governance_pipeline.py
proto/: Makefile  governance.proto
proxy/: main.go
proxy/handler/: nonstreaming.go  proxy.go  proxy_test.go  streaming.go
proxy/middleware/: logging.go
src/gateway/: __init__.py  config.py  health.py  main.py
tests/: conftest.py  governance_stress.py
tests/compliance/: __init__.py  test_g1_attestation.py  (+2 more)
(+153 files in other folders)
